Add current workspace changes and large media (part 3/4)
